--- a/client/src/components/card-track-analysis/card-track-analysis.styles.scss
+++ b/client/src/components/card-track-analysis/card-track-analysis.styles.scss
@@ -20,3 +20,94 @@
   @include setborderwithradius(2px solid black, 52px);
   @include flexeddiv(column, space-around);
 }
+
+.preview-audio {
+  width: 100%;
+}
+
+.suggested-points-container {
+  display: flex;
+  flex-direction: column;
+  height: 30%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+
+  .suggested-point {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding: 3px 0;
+    margin-bottom: 5px;
+    background-color: rgb(245, 141, 100);
+    border: 1px solid black;
+
+    .switch-button {
+      background-color: #2196f3;
+      -webkit-transition: 0.4s;
+      transition: 0.4s;
+      border-radius: 34px;
+      width: 35px;
+      cursor: pointer;
+      border: 0;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: contain;
+    }
+  }
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 35px;
+  height: 100%;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 34px;
+}
+
+.slider:before {
+  position: absolute;
+  content: '';
+  height: 55%;
+  width: 10px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background-color: #2196f3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(17px);
+  -ms-transform: translateX(17px);
+  transform: translateX(17px);
+}
